SERVER-6168 Fix exception memory leak in BSONIteratorSorted